--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
+    "@prisma/adapter-neon": "^7.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -30,10 +31,13 @@
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@mohamed-elrefai/tsconfigs": "^1.0.2",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/client": "^7.1.0",
     "@types/axios": "^0.14.4",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
@@ -43,6 +47,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
+    "@types/ws": "^8.18.1",
+    "prisma": "^7.1.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
