feat: Implement Paymob payment integration with order processing and API endpoints

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
     "@prisma/adapter-neon": "^7.1.0",
+    "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
